--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,15 @@
-GEMINI_API_KEY=AIzaSyCuOOL8LVMBbzl2umZMwiqa4Vd6R073drs
+ENV=local
+GEMINI_API_KEY=
+GEMINI_MODEL=gemini-1.5-flash
+
+# Required for model usage
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4o-mini
+
+# For evaluation and tracing
+LANGSMITH_TRACING=true
 LANGCHAIN_TRACING_V2=true
-LANGCHAIN_API_KEY=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
-LANGCHAIN_PROJECT=story-chatbot-final
+LANGSMITH_API_KEY=
+LANGSMITH_PROJECT=story-chatbot-final
+
+DATA_PATH=./data/vo-luyen-dinh-phong_chapters.json
