--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,8 +11,10 @@ dependencies = [
     "langchain-community>=0.4.1",
     "langchain-core>=1.2.4",
     "langchain-google-genai>=4.1.2",
+    "langchain-openai>=1.1.6",
     "langchain-text-splitters>=1.1.0",
     "langsmith>=0.5.0",
+    "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
     "uvicorn>=0.38.0",
 ]
